# psds-cpp-2025

./: .gitignore  CMakeLists.txt  SETUP.md  addition.cpp  main.cpp
.github/workflows/: testing.yml  testing_week_01.yml  testing_week_02.yml  testing_week_03.yml  testing_week_04.yml  testing_week_05.yml  testing_week_06.yml
01_week/: CMakeLists.txt
01_week/tasks/addition/: addition.cpp
01_week/tasks/char_changer/: README.md  char_changer.cpp  test.cpp
01_week/tasks/check_flags/: README.md  check_flags.cpp
01_week/tasks/length_lit/: length_lit.cpp
01_week/tasks/print_bits/: print_bits.cpp
01_week/tasks/quadratic/: quadratic.cpp
01_week/tasks/rms/: rms.cpp
02_week/: CMakeLists.txt
02_week/tasks/func_array/: func_array.cpp
02_week/tasks/last_of_us/: README.md  last_of_us.cpp
02_week/tasks/little_big/: little_big.cpp
02_week/tasks/longest/: longest.cpp
02_week/tasks/pretty_array/: pretty_array.cpp
02_week/tasks/swap_ptr/: swap_ptr.cpp
03_week/: CMakeLists.txt
03_week/tasks/data_stats/: data_stats.cpp
03_week/tasks/easy_compare/: easy_compare.cpp
03_week/tasks/enum_operators/: enum_operators.cpp
03_week/tasks/filter/: filter.cpp
03_week/tasks/find_all/: find_all.cpp
03_week/tasks/minmax/: minmax.cpp
03_week/tasks/os_overload/: os_overload.cpp
03_week/tasks/range/: range.cpp
03_week/tasks/unique/: unique.cpp
04_week/: CMakeLists.txt
04_week/tasks/: CMakeLists.txt
04_week/tasks/phasor/: phasor.cpp  phasor.hpp
04_week/tasks/queue/: queue.cpp  queue.hpp  test.cpp
04_week/tasks/ring_buffer/: ring_buffer.cpp  ring_buffer.hpp
04_week/tasks/stack/: stack.cpp  stack.hpp
05_week/: 05_memory_move.md  CMakeLists.txt
05_week/examples/: storage_duration.cpp
05_week/tasks/: CMakeLists.txt
05_week/tasks/cow_string/: CMakeLists.txt  README.md  cow_string.cpp  cow_string.hpp  test.cpp
05_week/tasks/simple_vector/: README.md  simple_vector.cpp  simple_vector.hpp  test.cpp
05_week/tasks/string_view/: CMakeLists.txt  README.md  string_view.cpp  string_view.hpp  test.cpp
05_week/tasks/tracer/: CMakeLists.txt  README.md  test.cpp  tracer.cpp  tracer.hpp
06_week/: 06_raii_smart_pointers.md  CMakeLists.txt
06_week/examples/: unique_ptr_base.cpp
06_week/tasks/: CMakeLists.txt
06_week/tasks/simple_list/: CMakeLists.txt  README.md  simple_list.cpp  test.cpp
06_week/tasks/smart_ptr/: CMakeLists.txt  README.md  smart_ptr.cpp  test.cpp
06_week/tasks/unique_ptr/: CMakeLists.txt  README.md  test.cpp  unique_ptr.cpp
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
build-asan/01_week/: Makefile  cmake_install.cmake
build-asan/01_week/tasks/: Makefile  cmake_install.cmake
build-asan/01_week/tasks/addition/: Makefile  (+1 more)
build-asan/tasks/: print_bits.cpp
cmake/: TestSolution.cmake
grading/: deadlines.json
(+12 files in other folders)
